gs/base/gdevpx.c
@@ -1259,6 +1259,8 @@ pclxl_close_device(gx_device * dev)
     gx_device_pclxl *const xdev = (gx_device_pclxl *)dev;
     FILE *file = xdev->file;
 
+    if (xdev->strm != NULL)
+	sflush(xdev->strm);
     if (xdev->in_page)
 	fputc(pxtEndPage, file);
     px_write_file_trailer(file);
